welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:56: error: value droite is not a member of Unit
droite();for(z <- 1 to n-1){avance()}droite();
                                     ^